Do not display PHP errors by default.

--- a/php/templates/php.ini.j2
+++ b/php/templates/php.ini.j2
@@ -3,5 +3,6 @@ memory_limit       = {{ php_memory_limit }}
 max_execution_time = 60
 short_open_tags    = false
 error_reporting    = E_ALL
+display_errors     = {{ php_display_errors }}
 
 session.save_path = {{ php_session_save_path }}
