Add namespace to Ansible roles.

--- a/devmachine.nginx/templates/server-symfony.conf.j2
+++ b/devmachine.nginx/templates/server-symfony.conf.j2
@@ -13,6 +13,8 @@ server {
         include                  fastcgi_params;
         fastcgi_param            SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
+        internal;
+
         fastcgi_buffer_size        128k;
         fastcgi_buffers            4 256k;
         fastcgi_busy_buffers_size  256k;
