Support for PHP 5.6 on Ubuntu.

--- a/devmachine.nginx/templates/server-symfony.conf.j2
+++ b/devmachine.nginx/templates/server-symfony.conf.j2
@@ -24,7 +24,7 @@ server {
         deny all;
     }
 }
-{% for alias in item.aliases %}
+{% for alias in item.aliases | default([]) %}
 
 server {
     listen      {{ item.port | default(80) }};
