--- a/devmachine.php/templates/php.ini.j2
+++ b/devmachine.php/templates/php.ini.j2
@@ -1,7 +1,7 @@
 date.timezone      = {{ php_default_tz }}
 memory_limit       = {{ php_memory_limit }}
 max_execution_time = 60
-short_open_tags    = false
+short_open_tag     = false
 error_reporting    = E_ALL
 display_errors     = {{ php_display_errors }}
 session.save_path  = {{ php_session_save_path }}
